# BagFromImages

./: .gitignore  CMakeLists.txt  README.md  example.yaml  main.cpp
